Refactor EmergencyRepository for stroke, seizure, choking